# cygnus

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  DRUM_TRANSCRIPTION_SETUP.md  README.md  astro.config.mjs  codecov.yml  cygnus.code-workspace  eslint.config.js  nx.json  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  wrangler.toml
.github/workflows/: api-tests.yml  build-lint.yml  e2e-playwright.yml  unit-tests.yml
.husky/: pre-commit
.specify/memory/: constitution.md
cygnus-api/: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  export_to_tfjs.py  project.json  pyproject.toml  pytest.ini  requirements.txt
cygnus-api/.github/workflows/: ci.yml
cygnus-api/src/: worker.py
cygnus-api/src/app/: main.py  storage.py  tf2_magenta_model.py  transcriber.py
cygnus-api/src/cli/: __init__.py  convert.py
cygnus-api/static/: index.html
cygnus-api/tests/: conftest.py  test_app_endpoints.py  test_app_errors.py  test_cli_convert.py  test_root_fallback.py  test_storage_adapter.py  test_storage_adapter_cloudflare.py  test_storage_adapter_local_extra.py  test_transcriber_fallback.py  test_transcriber_helpers.py  test_worker.py
cygnus-web/: .env.example  .prettierignore  .prettierrc.json  DRUM_TRANSCRIPTION_SETUP.md  astro.config.mjs  eslint.config.js  package.json  playwright.config.ts  project.json  vitest.config.ts  wrangler.toml
cygnus-web-e2e/: package.json  playwright.config.ts  project.json  tsconfig.json
cygnus-web-e2e/tests/: admin-song-management.spec.ts  admin-upload.spec.ts  global-setup.ts  tfjs-transcribe.spec.ts
cygnus-web/migrations/: 0001_init.sql  0002_add_preview_r2_key.sql  0003_add_categories.sql
cygnus-web/src/: middleware.ts
cygnus-web/tests/: admin-song-management.spec.ts  global-setup.ts
src/: env.d.ts
src/components/: AdminHome.svelte  (+11 more)
tests/: admin-upload.spec.ts  auth-redirect.spec.ts  tfjs-transcribe.spec.ts
(+86 files in other folders)
