[project]
name = "drum-transcription-api"
version = "0.1.0"
description = "FastAPI server for drum audio transcription using Magenta"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "python-multipart>=0.0.6",
    "aiofiles>=23.2.1",
    "pydantic>=2.0.0",
    "librosa>=0.10.0",
    "tensorflow>=2.13.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pretty-midi>=0.2.10",
    "note-seq>=0.0.5",
    "redis>=5.0.1",
    "celery>=5.3.4",
    "soundfile>=0.12.1",
    "httpx>=0.25.2",
    "click>=8.1.7",
    "uuid6>=2024.1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "pylint>=3.2.0",
    "pre-commit>=3.7.0",
    "tensorflowjs>=4.21.0",
]

[project.scripts]
convert-checkpoint = "src.cli.convert:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.6",
    "pylint>=3.2.0",
    "pre-commit>=3.7.0",
    "tensorflowjs>=4.21.0",
]

[tool.pylint.main]
py-version = "3.12"
jobs = 0
ignore = [".venv", "temp_downloads", "temp_uploads"]
ignored-modules = ["tensorflow", "tensorflow.keras", "js"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
  "missing-module-docstring",
  "missing-class-docstring",
  "missing-function-docstring",
  "too-few-public-methods",
]

[tool.pylint.typecheck]
generated-members = [
  "tensorflow.*",
  "tensorflow.keras.*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Let the formatter handle line length; avoid blocking commits on E501.
ignore = ["E501"]
